--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui!</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/chamadas.css">
+</head>
 </head>
 <body>
-    <nav>
-        <a href="../index.html">
-            <img src="../image/seta-esquerda.png" alt="seta-esquerda">
+    <header> 
+        <a href="../index.html"> 
+            <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
         </a>
-        <h1>Verifique Aqui!</h1>
-    </nav>
+        <h2>Verifique Aqui</h2>
+    </header >
     <main>
         <h2>Número:</h2>
         <h3>(99) 99999-9999</h3>
@@ -23,12 +26,13 @@
             <input type="number">
         </article>
     </main>
-    <footer> <!-- Rótulo final da página, como um sub menu-->
-        <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
-        <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
-        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
-        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
-        <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+
+    <footer>
+        <a href="chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="index.html"> <img src="../image/casa.png" alt="home"></a>
+        <a href="chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
     </footer>
 </body>
 </html>
