--- a/chamadas/verificador_chamada_2.html
+++ b/chamadas/verificador_chamada_2.html
@@ -54,12 +54,12 @@
         </article>
     </section>
     
-    <footer>
-        <a href="chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
-        <a href="verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
-        <a href="index.html"> <img src="../image/casa.png" alt="home"></a>
-        <a href="chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
-        <a href="lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+    <footer> <!-- Rótulo final da página, como um sub menu-->
+        <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
+        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
     </footer>
 </body>
 </html>
