3 telas chamadas feitas (mas com problemas)

--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -16,14 +16,17 @@
         <h2>Verifique Aqui</h2>
     </header >
     <main>
-        <h2>Número:</h2>
-        <h3>(99) 99999-9999</h3>
-        <h4>Bloqueado com sucesso!</h4>
+        <article class="confirmacao">
+            <h2>Número:</h2>
+            <h3>(99) 99999-9999</h3>
+            <h4>Bloqueado com sucesso!</h4>
+        </article>
 
-        <article>
-            <h2>Verifique outro número!</h2>
-            <img src="../image/telefone.png" alt="telefone">
-            <input type="number">
+        <article class="envio-numero">
+            <figure>
+                <img src="../image/telefone.png" alt="telefone">
+                <input type="number" id="digite-numero" name="numero" placeholder="DDD + Número" required>     
+            </figure>
         </article>
     </main>
 
