--- a/link/verificador.html
+++ b/link/verificador.html
@@ -30,7 +30,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer> <!-- Rótulo final da página, como um sub menu-->
         <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
         <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
         <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
