finaliazado sem validator

--- a/chamadas/verificador_chamada_2.html
+++ b/chamadas/verificador_chamada_2.html
@@ -48,9 +48,9 @@
                 <li><p><strong>Empresa:</strong> Nome</p></li>
             </ul>
         </article>
-        <div class="botao-centralizado">
+        <a href="verificador_chamadas_3.html" class="botao-centralizado">
             <button class="btn-acao">Bloquear</button>
-        </div>
+        </a>
     </div>
     
     <footer> <!-- Rótulo final da página, como um sub menu-->
