--- a/chamadas/verificador_chamadas.html
+++ b/chamadas/verificador_chamadas.html
@@ -47,7 +47,7 @@
             </a>
         </article>
     
-        <a class="info_especifica" g="verificador_chamada_2.html">
+        <a href="verificador_chamada_2.html" class="info_especifica" g="verificador_chamada_2.html">
             <button class="btn">Informações específicas</button>
             <img src="../image/lupa.png" alt="lupa">
         </a>
