passou no validator

--- a/chamadas/verificador_chamadas.html
+++ b/chamadas/verificador_chamadas.html
@@ -12,20 +12,16 @@
 <body>
     <header> 
         <a href="../index.html"> 
-            <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
+            <img src="../image/seta-esquerda.png" alt="seta esquerda">
         </a>
         <h2>Verifique Aqui</h2>
-    </header >
+    </header>
 
     <main>
         <article class="envio-numero">
-            <ul>
-                <li>
-                                <h2>Está recebendo várias ligações?</h2>
+            <h2>Está recebendo várias ligações?</h2>
             <h3>Digite o número:</h3>
-                </li>
-            </ul>
-
+            
             <figure>
                 <img src="../image/telefone.png" alt="telefone">
                 <input type="number" id="digite-numero" name="numero" placeholder="DDD + Número" required>     
@@ -33,32 +29,38 @@
         </article>
 
         <article class="botoes-envio-numero">
-            <a href="verificador_chamada_2.html">
-                <button class="btn">Informações</button>
-                <img src="../image/simbolo-de-informacao.png" alt="simbolo-de-informacao">
-            </a>
-            <a href="verificador_chamadas.html">
-                <button class="btn">Bloquear</button>
-                <img src="../image/cadeado.png" alt="cadeado">
-            </a>
-            <a href="verificador_chamadas.html">
-                <button class="btn">Contatos</button>
-                <img src="../image/pessoa.jpg" alt="simbolo-pessoinha">
-            </a>
+            <h2 class="esconder-info">Ações disponíveis</h2>
+            <div class="botao">
+                <a href="verificador_chamada_2.html" class="btn">
+                    <span>Informações</span>
+                    <img src="../image/simbolo-de-informacao.png" alt="simbolo-de-informacao">
+                </a>
+                <a href="verificador_chamadas.html" class="btn">
+                    <span>Bloquear</span>
+                    <img src="../image/cadeado.png" alt="cadeado">
+                </a>
+                <a href="verificador_chamadas.html" class="btn">
+                    <span>Contatos</span>
+                    <img src="../image/pessoa.jpg" alt="simbolo-pessoinha">
+                </a>
+            </div>
         </article>
     
-        <a href="verificador_chamada_2.html" class="info_especifica" g="verificador_chamada_2.html">
-            <button class="btn">Informações específicas</button>
-            <img src="../image/lupa.png" alt="lupa">
-        </a>
+        <article class="info-especifica">
+            <h2 class="esconder-info">Informações específicas</h2>
+            <a href="verificador_chamada_2.html" class="btn">
+                <span>Informações específicas</span>
+                <img src="../image/lupa.png" alt="lupa">
+            </a>
+        </article>
     </main>
 
-    <footer> <!-- Rótulo final da página, como um sub menu-->
-        <a href="../chamadas/verificador_chamadas.html"> <img src="../image/telefone.png" alt="telefone"></a>
-        <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
-        <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
-        <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
-        <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
+    <footer>
+        <a href="../chamadas/verificador_chamadas.html"><img src="../image/telefone.png" alt="telefone"></a>
+        <a href="../verificador/verificador.html"><img src="../image/lupa.png" alt="verificador de link"></a>
+        <a href="../index.html"><img src="../image/casa.png" alt="home"></a>
+        <a href="../chatbot/chatbot.html"><img src="../image/robo.png" alt="chatbot"></a>
+        <a href="../lojas/lojas.html"><img src="../image/bolsa-de-compras.png" alt="loja"></a>
     </footer>
 </body>
 </html>
