--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/chamadas.css">
 </head>
-</head>
+
 <body>
     <header> 
         <a href="../index.html"> 
@@ -23,6 +23,7 @@
         </article>
 
         <article class="envio-numero">
+            <h2 class="esconder-info"> vai ficar escondido</h2>
             <figure>
                 <img src="../image/telefone.png" alt="telefone">
                 <input type="number" id="digite-numero" name="numero" placeholder="DDD + Número" required>     
