--- a/chamadas/verificador_chamadas_3.html
+++ b/chamadas/verificador_chamadas_3.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui!</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/chamadas.css">
+    <link rel="stylesheet" href="../css/chamadas3.css">
+    <script src="../js/script_chamadas3.js"></script>
 </head>
 
 <body>
     <header> 
-        <a href="../index.html"> 
+        <a href="../chamadas/verificador_chamada_2.html"> 
             <img src = "../image/seta-esquerda.png" alt = "seta esquerda">
         </a>
         <h2>Verifique Aqui</h2>
