--- a/chamadas/verificador_chamadas_2.html
+++ b/chamadas/verificador_chamadas_2.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui!</title>
+
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/chamadas.css">
+    <link rel="stylesheet" href="../css/chamadas2.css">
+    <script src="../js/script_chamadas2.js"></script>
 </head>
 
 <body>
     <header> 
-        <a href="../index.html"> 
+        <a href="../chamadas/verificador_chamadas.html"> 
             <img src="../image/seta-esquerda.png" alt="seta esquerda">
         </a>
         <h2>Verifique Aqui</h2>
@@ -19,7 +21,7 @@
     <article class="envio-numero">
         <h2 class="esconder-info">Verificação de número</h2>
         <figure>
-            <img src="../image/telefone.png" alt="telefone">
+            <img id="telefoneimagem" src="../image/telefone.png" alt="telefone">
             <input type="number" id="digite-numero" name="numero" placeholder="DDD + Número" required>     
         </figure>
     </article>
@@ -28,15 +30,11 @@
         <section class="container-numero">
             <h2 class="esconder-info">Ações disponíveis</h2>
             <div class="botoes-envio-numero">
-                <a href="verificador_chamada_2.html" class="btn">
-                    <span>Informações</span>
-                    <img src="../image/simbolo-de-informacao.png" alt="informação">
-                </a>
-                <a href="verificador_chamadas.html" class="btn desativado">
+                <a href="verificador_chamadas_3.html" class="btn">
                     <span>Bloquear</span>
                     <img src="../image/cadeado.png" alt="cadeado">
                 </a>
-                <a href="verificador_chamadas.html" class="btn desativado">
+                <a href="#" class="btn">
                     <span>Contatos</span>
                     <img src="../image/pessoa.jpg" alt="pessoa">
                 </a>
@@ -52,10 +50,6 @@
                 <li><p><strong>Empresa:</strong> Nome</p></li>
             </ul>
         </article>
-        
-        <div class="botao-centralizado">
-            <a href="verificador_chamadas_3.html" class="btn-acao">Bloquear</a>
-        </div>
     </div>
     
     <footer>
