--- a/link/verificador.html
+++ b/link/verificador.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifique Aqui</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/links.css"> 
+    <link rel="stylesheet" href="../css/links.css">
+    
 </head>
 
 <body>
@@ -37,5 +38,6 @@
         <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
         <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
     </footer>
+    <script src="js/script_links.js" defer></script>
 </body>
 </html>
