--- a/chatbot/chatbot2.html
+++ b/chatbot/chatbot2.html
@@ -6,6 +6,7 @@
     <title>Chatbot</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/chatbot.css">
+    <script src="../js/script_chatbot.js"></script>
 </head>
 <body>
     <header> 
@@ -27,13 +28,13 @@
             <a href="chatbot3.html" class="escolha">
                 <h2>Conectar com o Whatsapp</h2>
             </a>
-            <a href="" class="escolha">
+            <a href="" class="escolha" id="desabilitado">
                 <h2>Conectar com Gov.Br</h2>
             </a>
         </div> 
     </main> 
 
-    <div class="chat">
+    <div class="chat" id="desabilitado">
         <input type="text" placeholder="Digite aqui...">
         <button>Enviar</button>
     </div>
