--- a/chatbot/chatbot3.html
+++ b/chatbot/chatbot3.html
@@ -6,6 +6,7 @@
     <title>Chatbot</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/chatbot.css">
+    <script src="../js/script_chatbot.js"></script>
 </head>
 <body>
     <header> 
@@ -26,7 +27,7 @@
         <p class="user_bubble">Whatsapp conectado</p>
         <p class="chat-bubble">Agora você pode consultar e enviar mensagens diretamente de seu Whatsapp!</p>
     </main>    
-    <div class="chat">
+    <div class="chat" id="desabilitado">
         <input type="text" placeholder="Digite aqui...">
         <button>Enviar</button>
     </div>
