--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Verifique Aqui</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/script_index.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
     <main>
         <article class="perfil">
-        <a href="../perfil.html"> <img src="image/pessoa.jpg" alt="foto do usuário"></a>
+        <img src="image/pessoa.jpg" alt="foto do usuário">
         <h2>Bem vinda Persona</h2>
         </article>
         
