--- a/chamadas/verificador_chamadas_2.html
+++ b/chamadas/verificador_chamadas_2.html
@@ -34,7 +34,7 @@
                     <span>Bloquear</span>
                     <img src="../image/cadeado.png" alt="cadeado">
                 </a>
-                <a href="#" class="btn">
+                <a href="#" class="btn" id="contatosss">
                     <span>Contatos</span>
                     <img src="../image/pessoa.jpg" alt="pessoa">
                 </a>
