--- a/casos_extras/leis_de_proteção.html
+++ b/casos_extras/leis_de_proteção.html
@@ -22,22 +22,22 @@
                     <a href="https://www.gov.br/esporte/pt-br/acesso-a-informacao/lgpd" target="_blank">Legislação Brasileira</a>
                 </li>
                 <li class="quadrados">
-                    <a href="">Práticas seguras</a>
+                    <a href="https://www.gov.br/anatel/pt-br/assuntos/dicas-contra-fraudes">Práticas seguras</a>
                 </li>
             </ul>
             <ul class="linhas">
                 <li class="quadrados">
-                    <a href="">Caiu em golpe?</a>
+                    <a href="https://www.cnnbrasil.com.br/tecnologia/5-coisas-para-fazer-se-for-vitima-de-um-golpe-na-web/">Caiu em golpe?</a>
                 </li>
                 <li class="quadrados">
-                    <a href="">Fique por dentro de novas tendências de golpe</a>
+                    <a href="https://www.serasaexperian.com.br/conteudos/prevencao-a-fraude/tendencias-e-previsoes-das-fraudes-em-2025-baixe-o-e-book/">Fique por dentro de novas tendências de golpe</a>
                 </li>
             </ul>
         </div>
 
         <footer> <!-- Rótulo final da página, como um sub menu-->
             <a href="../chamadas/verificador_chamadas_3.html"> <img src="../image/telefone.png" alt="telefone"></a>
-            <a href="../verificador/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
+            <a href="../link/verificador.html"> <img src="../image/lupa.png" alt="verificador de link"></a>
             <a href="../index.html"> <img src="../image/casa.png" alt="home"></a>
             <a href="../chatbot/chatbot.html"> <img src="../image/robo.png" alt="chatbot"></a>
             <a href="../lojas/lojas.html"> <img src="../image/bolsa-de-compras.png" alt="loja"></a>
